@@ -2,7 +2,6 @@
  * Support scaling for split boards
  * Support overriding vulnerabilities
  * Support board number epochs
- * Other output formats
  * gsalliere
  * check movements
  * localpoints
